<resources>
    <string name="app_name">WeatherInfo</string>
    <string name="lbl_celsius">celsius</string>
    <string name="lbl_fahrenheit">fahrenheit</string>

    <!-- Put your own APP ID here -->
    <string name="open_weather_maps_app_id">11111</string>

    <string name="weather_sunny">&#xf00d;</string>
    <string name="weather_clear_night">&#xf02e;</string>

    <string name="weather_foggy">&#xf014;</string>
    <string name="weather_cloudy">&#xf013;</string>
    <string name="weather_rainy">&#xf019;</string>
    <string name="weather_snowy">&#xf01b;</string>
    <string name="weather_thunder">&#xf01e;</string>
    <string name="weather_drizzle">&#xf01c;</string>

    <string name="place_not_found">Sorry, no weather data found.</string>
    <string name="check_internet_connection">Check your internet connection.</string>
    <string name="symbol_celsius">℃</string>
    <string name="lbl_details">Details</string>
    <string name="lbl_humidity">Humidity</string>
    <string name="lbl_pressure">Pressure</string>
    <string name="lbl_speed">Speed</string>
    <string name="lbl_clouds">Clouds</string>
    <string name="symbol_fahrenheit">℉</string>
    <string name="lbl_share">Share</string>
</resources>
